// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayListGroup should render a ClayListGroup with classes 1`] = `<ul class="list-group show-quick-actions-on-hover elementClasses my-custom-class"></ul>`;

exports[`ClayListGroup should render a ClayListGroup with id 1`] = `<ul class="list-group show-quick-actions-on-hover" id="myId"></ul>`;

exports[`ClayListGroup should render a ClayListGroup with list elements with description 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Item 1</h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Item 2</h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">Item 3</h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a ClayListGroup with list elements with description and url 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a ClayListGroup with simple list elements 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">Item 1</li>
  <li class="list-group-item list-group-item-flex">Item 2</li>
  <li class="list-group-item list-group-item-flex">Item 3</li>
</ul>
`;

exports[`ClayListGroup should render a ClayListGroup with simple list elements with links 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <a href="#1">Item 1</a>
  </li>
  <li class="list-group-item list-group-item-flex">
    <a href="#2">Item 2</a>
  </li>
  <li class="list-group-item list-group-item-flex">
    <a href="#3">Item 3</a>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with header title 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-header">
    <h3 class="list-group-header-title">Group Header 1</h3>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with list elements with action menu 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with list elements with circle icons 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary rounded-circle">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with list elements with icons 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with list elements with label 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
      <div class="list-group-detail">
        <span class="label label-secondary">Status</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
      <div class="list-group-detail">
        <span class="label label-warning">Pending</span>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
      <div class="list-group-detail">
        <span class="label label-success">Aproved</span>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with list elements with quick action menu 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu">
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-trash">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#trash"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-download">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#download"></use>
          </svg>
        </a>
        <a class=" quick-action-item">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-info-circle-open">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#info-circle-open"></use>
          </svg>
        </a>
      </div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render a selectable ClayListGroup with select list items 1`] = `
<ul class="list-group show-quick-actions-on-hover">
  <li class="list-group-item list-group-item-flex active">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#1">Item 1</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 1</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex active">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#2">Item 2</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 2</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
  <li class="list-group-item list-group-item-flex active">
    <div class="flex-col">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-indicator"></span>
          <span class="custom-control-description sr-only">select</span>
        </label>
      </div>
    </div>
    <div class="flex-col">
      <span class="sticker sticker-primary">
        <svg aria-hidden="true" class="lexicon-icon lexicon-icon-folder">
          <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#folder"></use>
        </svg>
      </span>
    </div>
    <div class="flex-col flex-col-expand">
      <h4 class="list-group-title text-truncate">
        <a href="#3">Item 3</a>
      </h4>
      <p class="list-group-subtitle text-truncate">Description 3</p>
    </div>
    <div class="flex-col">
      <div class="quick-action-menu"></div>
      <div class="dropdown dropdown-action">
        <button aria-expanded="false" aria-haspopup="true" aria-label="toggle" class="dropdown-toggle btn btn-unstyled">
          <svg aria-hidden="true" class="lexicon-icon lexicon-icon-ellipsis-v">
            <use xlink:href="../node_modules/lexicon-ux/build/images/icons/icons.svg#ellipsis-v"></use>
          </svg>
        </button>
        <div class="dropdown-menu">
          <ul class="list-unstyled">
            <li>
              <a class=" dropdown-item" href="#1">Option 1</a>
            </li>
            <li>
              <a class=" dropdown-item" href="#2">Option 2</a>
            </li>
            <li aria-hidden="true" class="dropdown-divider" role="presentation"></li>
            <li>
              <a class=" dropdown-item" href="#3">Option 3</a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </li>
</ul>
`;

exports[`ClayListGroup should render the default markup 1`] = `<ul class="list-group show-quick-actions-on-hover"></ul>`;
